Updates to CSS and Index files

--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Hello Karen</title>
+	<title>Module 2 Assignment</title>
+	<link rel="stylesheet" href="css/module2-solution.css">
 </head>
+
 <body>
-<h1>Hello Karen – She's VERY Cute one!</h1>
+
+<h1>Our Menu</h1>
+
+
+<div class="row">
+	<div class="col-desk-3 col-tab-6 col-ph12">
+		<div id="box">
+			<div id="content-chicken">Chicken</div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+		</div>
+	</div>
+
+	<div class="col-desk-3 col-tab-6 col-ph12">
+		<div id="box">
+			<div id="content-beef">Beef</div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+		</div>
+	</div>
+
+	<div class="col-desk-3 col-tab-6 col-ph12">
+		<div id="box">
+			<div id="content-sushi">Sushi</div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+		</div>
+	</div>
+</div>
+
+
 </body>
 </html>
