Changes to make it cleaner less code

--- a/index.html
+++ b/index.html
@@ -13,22 +13,27 @@
 
 
 <div class="row">
-	<div class="col-desk-3 col-tab-6 col-ph12">
+	<div class="col-desk-4 col-tab-6 col-ph12">
 		<div id="box">
 			<div id="content-chicken">Chicken</div>
+				
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 		</div>
 	</div>
 
-	<div class="col-desk-3 col-tab-6 col-ph12">
+	<div class="col-desk-4 col-tab-6 col-ph12">
 		<div id="box">
-			<div id="content-beef">Beef</div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+			<div id="content-beef">Beef</div>
+
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 		</div>
 	</div>
 
-	<div class="col-desk-3 col-tab-6 col-ph12">
+	<div class="col-desk-4 col-tab-6 col-tab-12 col-ph12">
 		<div id="box">
-			<div id="content-sushi">Sushi</div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+			<div id="content-sushi">Sushi</div>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
 		</div>
 	</div>
 </div>
